--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,12 @@
-.topnav {
+.nav-list {
     background-color: #9c33b6;
     overflow: hidden;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
   }
-  
-  .topnav > a {
+
+  .nav-list a {
     float: left;
     display: block;
     color: #f2f2f2;
@@ -12,39 +15,45 @@
     text-decoration: none;
     font-size: 17px;
   } 
+
+  .nav-list li:not(:first-child){ float:right;}
   
-  .topnav a:hover {
-    background-color: #c4f0a6;
+  .nav-list a:hover {
+    background-color: #98a58f;
     color: black;
   }
   
-  .topnav a.active {
-    background-color: #04AA6D;
-    color: white;
-  }
-  
-  .topnav .icon {
+  .hamburger {
     display: none;
   }
 
   @media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon {
+    
+    .nav-list li:not(:first-child){ display: none;}
+
+    .nav-list li:last-child {
       float: right;
       display: block;
     }
   }
 
   @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
-    .topnav.responsive a.icon {
+    .nav-list.responsive {position: relative;}
+    .nav-list.responsive a.burgerLink {
       position: absolute;
       right: 0;
       top: 0;
     }
-    .topnav.responsive a {
+
+    .nav-list.responsive li {
       float: none;
-      display: block;
+      display: list-item;
+      text-align: left;
+    }
+
+    .nav-list.responsive a{
+      float:none;
       text-align: left;
     }
   }
+  
