--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,19 @@
+body{
+    background-color: #000000; 
+    color: #FFFFFF;
+
+}
+
+.sections-container{
+
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 20px 20px 0 20px;
+}
+
 .nav-list {
-    background-color: #9c33b6;
+    background-color: #000000;
     overflow: hidden;
     list-style-type: none;
     margin: 0;
@@ -15,19 +29,103 @@
     text-decoration: none;
     font-size: 17px;
   } 
-
-  .nav-list li:not(:first-child){ float:right;}
   
   .nav-list a:hover {
     background-color: #98a58f;
     color: black;
+    transition: all 0.5s;
   }
+
+  .nav-list li:not(:first-child){ float:right;}
   
+  img{
+    max-width: 100%;
+    max-height: 100%;
+  }
+
   .hamburger {
     display: none;
   }
 
-  @media screen and (max-width: 600px) {
+  .text-section{
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }  
+
+  h1{
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 84px;
+    line-height: 102px;
+    letter-spacing: -2px;
+  }
+
+  p{
+    font-family: "Source Sans 3", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    max-width: 410px;
+    width: 100%;
+    font-size: 22px;
+    line-height: 34px;
+    letter-spacing: 0px;
+  }
+
+  a{
+    font-family: "Source Sans 3", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+  }
+
+  #logo{
+    font-family: "Actor", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 24px;
+    padding: 9px 14px;
+  }
+
+  @media screen and (max-width: 800px)
+  {
+    .nav-list li:not(:first-child){ float:right;}
+
+    h1{
+      font-size: 72px;
+      line-height: 83px;
+      letter-spacing: -1.6px;
+    }
+
+    p{
+      max-width: 573px;
+    }
+
+    .sections-container{
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    .text-section{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;}
+
+    .img-section{
+      display: flex;
+      justify-content: center;
+    }
+
+    .text-section{
+
+      justify-content: flex-start;
+      height: 50vh;
+    }
+  }
+
+  @media screen and (max-width: 500px) {
     
     .nav-list li:not(:first-child){ display: none;}
 
@@ -37,7 +135,7 @@
     }
   }
 
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 500px) {
     .nav-list.responsive {position: relative;}
     .nav-list.responsive a.burgerLink {
       position: absolute;
@@ -55,5 +153,24 @@
       float:none;
       text-align: left;
     }
+  }
+
+  @media screen and (max-width: 400px) {
+
+    h1{
+      font-size: 36px;
+    }
+
+    p{
+      font-size: 12px;
+      line-height: 25px;
+    }
+
+    .text-section{
+      margin: 0 20px 0 20px;
+      justify-content: flex-start;
+      height: 40vh;
+    }
+
   }
   
